@@ -1,5 +1,5 @@
 [main]
-installer_version = '1.3.5';
+installer_version = '1.3.8';
 min_upgrade_version = '2.0.1'
 archive = 'data/data.tar.gz'
 dbtype = 'mysqli'
